--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,9 @@ google-cloud-texttospeech>=2.24.0,<3.0.0
 # Web Search
 tavily-python>=0.5.0,<1.0.0
 
+# Language Detection
+lingua-language-detector>=2.0.2,<3.0.0
+
 # Configuration & Validation
 pydantic>=2.0.0,<3.0.0
 pydantic-settings>=2.0.0,<3.0.0
