--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,9 @@ tavily-python>=0.5.0,<1.0.0
 # Language Detection
 lingua-language-detector>=2.0.2,<3.0.0
 
+# Telegram Bot
+python-telegram-bot>=21.0,<22.0
+
 # Configuration & Validation
 pydantic>=2.0.0,<3.0.0
 pydantic-settings>=2.0.0,<3.0.0
