--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,7 @@ pymongo>=4.9.0,<5.0.0
 # Google Cloud (Voice)
 google-cloud-speech>=2.29.0,<3.0.0
 google-cloud-texttospeech>=2.24.0,<3.0.0
+pydub>=0.25.1
 
 # Web Search
 tavily-python>=0.5.0,<1.0.0
