--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,6 +28,9 @@ lingua-language-detector>=2.0.2,<3.0.0
 # Telegram Bot
 python-telegram-bot>=21.0,<22.0
 
+# Scheduler
+apscheduler>=3.10.0,<4.0.0
+
 # Configuration & Validation
 pydantic>=2.0.0,<3.0.0
 pydantic-settings>=2.0.0,<3.0.0
