--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -31,6 +31,9 @@ python-telegram-bot>=21.0,<22.0
 # Scheduler
 apscheduler>=3.10.0,<4.0.0
 
+# Spotify Integration
+tekore>=5.0.0,<6.0.0
+
 # Configuration & Validation
 pydantic>=2.0.0,<3.0.0
 pydantic-settings>=2.0.0,<3.0.0
